; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/~attic/pc/extr_sdl-netplay.c_CheckUDP.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/~attic/pc/extr_sdl-netplay.c_CheckUDP.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@magic = common dso_local global i64 0, align 8
@incounter = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64, i64)* @CheckUDP to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @CheckUDP(i32* %0, i64 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 4
  %12 = load i64, i64* %6, align 8
  %13 = add nsw i64 %12, 8
  %14 = call i64 @FCEUI_CRC32(i32 0, i32* %11, i64 %13)
  store i64 %14, i64* %8, align 8
  %15 = load i32*, i32** %5, align 8
  %16 = call i64 @de32(i32* %15)
  store i64 %16, i64* %9, align 8
  %17 = load i64, i64* %8, align 8
  %18 = load i64, i64* %9, align 8
  %19 = icmp ne i64 %17, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %49

21:                                               ; preds = %3
  %22 = load i32*, i32** %5, align 8
  %23 = getelementptr inbounds i32, i32* %22, i64 4
  store i32* %23, i32** %5, align 8
  %24 = load i32*, i32** %5, align 8
  %25 = call i64 @de32(i32* %24)
  %26 = load i64, i64* @magic, align 8
  %27 = icmp ne i64 %25, %26
  br i1 %27, label %28, label %29

28:                                               ; preds = %21
  store i32 0, i32* %4, align 4
  br label %49

29:                                               ; preds = %21
  %30 = load i32*, i32** %5, align 8
  %31 = getelementptr inbounds i32, i32* %30, i64 4
  store i32* %31, i32** %5, align 8
  %32 = load i64, i64* %7, align 8
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %41

34:                                               ; preds = %29
  %35 = load i32*, i32** %5, align 8
  %36 = call i64 @de32(i32* %35)
  %37 = load i64, i64* @incounter, align 8
  %38 = icmp slt i64 %36, %37
  br i1 %38, label %39, label %40

39:                                               ; preds = %34
  store i32 0, i32* %4, align 4
  br label %49

40:                                               ; preds = %34
  br label %48

41:                                               ; preds = %29
  %42 = load i32*, i32** %5, align 8
  %43 = call i64 @de32(i32* %42)
  %44 = load i64, i64* @incounter, align 8
  %45 = icmp ne i64 %43, %44
  br i1 %45, label %46, label %47

46:                                               ; preds = %41
  store i32 0, i32* %4, align 4
  br label %49

47:                                               ; preds = %41
  br label %48

48:                                               ; preds = %47, %40
  store i32 1, i32* %4, align 4
  br label %49

49:                                               ; preds = %48, %46, %39, %28, %20
  %50 = load i32, i32* %4, align 4
  ret i32 %50
}

declare dso_local i64 @FCEUI_CRC32(i32, i32*, i64) #1

declare dso_local i64 @de32(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
